# hpc_lab

./: .gitignore
Assignment 1/code/: CMakeLists.txt  collect_data1.sh  collect_data2.sh  dgemm_avx.c  dgemm_blocked.c  dgemm_variable_problem_size.c  gauss_vectorized.c  logfile_dgemm_avx.txt  logfile_dgemm_blocked.txt  logfile_dgemm_variable_problem_size.txt  todo_fred.txt  vector.c  vector_1_aligned_level5.optrpt  vector_2_all_changes_level5.optrpt  vector_level3.optrpt  vector_level5.optrpt  vector_modified.c
Assignment 1/presentation/: conclusion.tex  ex1.tex  ex2.tex  ex3.tex  ex4.tex  main.tex
Assignment 1/report/: report.tex
